src/orb/index.css
.OrbGrid-cell-highlighted {
    animation-name: anim-info-updated;
    animation-duration: 4s;
}

@keyframes anim-info-updated {
    0% {
      background-color: red;
      color: rgb(128, 0, 0);
    }
    100% {
      background-color: white;
      color: rgb(0, 0, 0);
    }
}

